# verilog-compiler

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  dconfig
Testing/Temporary/: CTestCostData.txt
docs/: index.html
docs/docs/html/: annotated.html  classes.html  dir_016cf7dcc2308cc71805758778a2b604.html  dir_08699f43e238ed0a47f331944a0044f9.html  (+62 more)
docs/html/: classes.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.html
docs/latex/: refman.tex
docs/verilog_syntax/: Grammar.md  Lex.md
include/: SymbolTable.h  Token.h  Token.h~
include/ast/: AstNode.h  File.h  Module.h
include/common/: Colors.h  Destination.h  Destination.h~  Error.h  Error.h~  ErrorLog.h  ErrorLog.h~  NumWrap.h  Position.h  Position.h~  Source.h  Source.h~  TypeOpUtils.h
include/main/: Lexer.cpp~  Lexer.h  Lexer.h~
include/test/: TestUtils.h  TestUtils.h~
lib/: CMakeLists.txt
src/: SymbolTable.cpp  Token.cpp  Token.cpp~
src/ast/: AstNode.cpp  File.cpp  Module.cpp
src/common/: Colors.cpp  Destination.cpp  Error.cpp  Error.cpp~  ErrorLog.cpp  ErrorLog.cpp~  NumWrap.cpp  Position.cpp  Position.cpp~  Source.cpp  Source.cpp~  TypeOpUtils.cpp
src/main/: Lexer.cpp  Lexer.cpp~
test/: TokenTest.cpp  TokenTest.cpp~
test/common/: DestinationTest.cpp  DestinationTest.cpp~  ErrorLogTest.cpp  ErrorLogTest.cpp~  ErrorTest.cpp  ErrorTest.cpp~  PositionTest.cpp  PositionTest.cpp~  SourceTest.cpp  SourceTest.cpp~
test/main/: LexerTest.cpp  LexerTest.cpp~
(+1242 files in other folders)
